# ckanext-content

./: 404.html  MANIFEST.in  README.md  ckeditor5-pure.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  sitemap.xml  test.ini  webpack.config.cjs
.github/workflows/: test.yml
ckanext/content/: config.py  config_declaration.yaml  helpers.py  interfaces.py  loader.py  middleware.py  plugin.py  types.py  utils.py
ckanext/content/assets/: script.js  webassets.yml
ckanext/content/assets/css/: admin.css
ckanext/content/assets/css/custom/: content.css  variables.css
ckanext/content/assets/js/: ckan-content-autoslug.js  ckan-content-ckeditor.js  ckan-content-list.js
ckanext/content/logic/: action.py  auth.py  validators.py
ckanext/content/migration/content/: alembic.ini
ckanext/content/migration/content/versions/: 0740d5df4d87_add_state_column.py  (+4 more)
ckanext/content/model/: content.py  content_revision.py
ckanext/content/permissions/: default_content_permissions.yaml
ckanext/content/schemas/content/: blog.yaml  page.yaml  presets.yaml
ckanext/content/templates/: header.html
ckanext/content/templates/content/: create.html  delete.html  edit.html  list.html  page.html  revisions.html
ckanext/content/tests/: test_plugin.py
ckanext/content/views/: __init__.py  content.py  content_translations.py  simple_search.py
config_settings/: index.html
docs/: config_settings.md  extra.md  index.md  installation.md  usage.md
extra/: index.html
installation/: index.html
search/: search_index.json
usage/: index.html
(+22 files in other folders)
