[project]
name = "ckanext-content"
version = "1.0.3"
description = ""
readme = "README.md"
authors = [
    {name = "Yan", email = "yan.rudenko@gmail.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "content", "content-types", "pages", "blogs", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/Datashades/ckanext-content"

[project.entry-points."ckan.plugins"]
content = "ckanext.content.plugin:ContentPlugin"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
